# si-photonics-toolkit

./: .buildinfo  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  1- Effective Index.html  1- Effective Index.ipynb  2- Permittivity.html  2- Permittivity.ipynb  3- Group Index.html  3- Group Index.ipynb  404.html  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  genindex.html  index.html  landing.html  mkdocs.yml  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements-docs.txt  requirements.txt  search.html  searchindex.js  setup.py  sipkit.html  sitemap.xml  tutorials.html
.github/workflows/: bump-publish.yml  bumpversion.yml  docs.yml  makefile.yml  publish.yaml  publish.yml  publishpackage.yml
1- Effective Index/: index.html
2- Permittivity/: index.html
3- Group Index/: index.html
Example Notebooks/: 1- Effective Index.ipynb  2- Polarization Fraction.ipynb  3- Permittivity.ipynb  4 - Coupling Coefficient.ipynb  4 - Group Index.ipynb  5 - Derivative.ipynb  6 - Transfer Matrix Calculations.ipynb
Example Notebooks/.ipynb_checkpoints/: 1- Effective Index-checkpoint.ipynb  2- Polarization Fraction-checkpoint.ipynb  3- Permittivity-checkpoint.ipynb
_modules/: index.html
_modules/sipkit/: effective_index.html  group_index.html  permittivity.html
_sources/: 1- Effective Index.ipynb  modules.rst
api/: index.html
docs/: 1- Effective Index.ipynb  2- Permittivity.ipynb  3- Group Index.ipynb  api.md  index.md  requirements.txt
docs/source/: 1- Effective Index.ipynb  2- Permittivity.ipynb  3- Group Index.ipynb  api.md  conf.py  index.rst  index1.md  landing.rst  modules.rst  sipkit.rst  tutorials.rst
docs/source/notebooks/: 1- Effective Index.ipynb  2- Permittivity.ipynb  3 - Group Index.ipynb
search/: search_index.json
siphotonics/: __init__.py  command_line.py  coupler.py  couplingc.py  derivative.py  effective_index.py  group_index.py  neff_pol.py  permittivity.py  read_data.py  ring.py  trax_neff.py  util.py
siphotonics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
siphotonics/data/: coupling_coefficient_TE0-TE0.pickle.REMOVED.git-id  dc-mesh-2.mat  dc-mesh-3.mat  dc-mesh-4.mat  neff.mat  neff_pol.pickle  neff_te0_fitted_Si_fitted_SiO2_width_240_1_700_wav_1200_0p1_1700.csv.REMOVED.git-id  neff_te1_fitted_Si_fitted_SiO2_width_240_10_700_wav_1200_10_1700.csv  neff_te1_fitted_Si_fitted_SiO2_width_240_1_700_wav_1200_0p1_1700.csv.REMOVED.git-id  neff_te2_fitted_Si_fitted_SiO2_width_240_10_700_wav_1200_10_1700.csv  neff_te2_fitted_Si_fitted_SiO2_width_240_1_700_wav_1200_0p1_1700.csv.REMOVED.git-id  neff_tm0_fitted_Si_fitted_SiO2_width_240_1_700_wav_1200_0p1_1700.csv.REMOVED.git-id  neff_tm1_fitted_Si_fitted_SiO2_width_240_10_700_wav_1200_10_1700.csv  neff_tm1_fitted_Si_fitted_SiO2_width_240_1_700_wav_1200_0p1_1700.csv.REMOVED.git-id  neff_width_240_1_700_wav_1200_1_1700.csv  neff_width_240_20_700_wav_1200_0p1_1700.csv  neff_width_240_20_700_wav_1200_1_1700.csv  neff_width_240_20_700_wav_1200_20_1700.csv
sipkit/: __init__.py  effective_index.py  group_index.py  permittivity.py  read_data.py  util.py
sipkit/data/: Si_Palik_Refractive_Index.pickle  neff_te0_fitted_Si_fitted_SiO2_width_240_10_700_wav_1200_10_1700.csv  neff_te1_fitted_Si_fitted_SiO2_width_240_10_700_wav_1200_10_1700.csv  neff_te2_fitted_Si_fitted_SiO2_width_240_10_700_wav_1200_10_1700.csv  neff_tm0_fitted_Si_fitted_SiO2_width_240_10_700_wav_1200_10_1700.csv  permittivity.pkl
tests/: test_derivative.py  test_neff_pol.py  test_permittivity.py  test_trax_neff.py
