[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "siphotonics"
version = "1.0.0"
description = "A toolkit to design of silicon photonic components"
readme = "README.md"
authors = [{ name = "Aycan Deniz Vit", email = "aycandv@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["photonics", "nanophotonics", "silicon photonics"]
dependencies = [
    "jax",
    "trax",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = [
    "pylint", 
    "sed", 
    "tee", 
    "anybadge", 
    "isort", 
    "pytest", 
    "click", 
    "black", 
    "autoflake", 
    "pre-commit", 
    "commitizen", 
    "pytest-cov", 
    "black", 
    "bumpver", 
    "pip-tools"
]

[project.urls]
Homepage = "https://github.com/Photonic-Architecture-Laboratories/siphotonics"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
version_files = [
    "pyproject.toml:version",
    "__version__.py"
]
