[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sipkit"
dynamic = ["version"]
description = "A toolkit to rapidly lookup parameters for the design of silicon photonic components with automatic differentiation capability"
readme = "README.md"
authors = [{ name = "Aycan Deniz Vit", email = "aycandv@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["photonics", "nanophotonics", "silicon photonics"]
dependencies = [
    "jax",
    "jaxlib",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = [
    "pylint", 
    "sed", 
    "tee", 
    "anybadge", 
    "isort", 
    "pytest", 
    "click", 
    "black", 
    "autoflake", 
    "pre-commit", 
    "commitizen", 
    "pytest-cov", 
    "black", 
    "bumpver", 
    "pip-tools"
]

[project.urls]
Homepage = "https://github.com/Photonic-Architecture-Laboratories/si-photonics-toolkit"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.5.0"
tag_format = "$version"
version_files = [
    "pyproject.toml:version",
    "sipkit/__version__.py:version",
]

[tool.setuptools.dynamic]
version = { attr = "sipkit.__version__.version"}
